bundle/manifests/coraza-kubernetes-operator-ruleset-cache-destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: coraza-kubernetes-operator-ruleset-cache
  labels:
    app.kubernetes.io/name: coraza-kubernetes-operator
    app.kubernetes.io/instance: coraza-kubernetes-operator
    control-plane: coraza-controller-manager
    app.kubernetes.io/version: 0.2.0
    istio.io/rev: coraza
spec:
  host: coraza-kubernetes-operator.coraza-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
